# PyAZSentinel

./: .gitignore  CONVERSION_SUMMARY.md  GETTING_STARTED.md  README.md  pyproject.toml  requirements.txt  setup.py
Analytic Rules/: Lumen_DomainEntity_DNS.yaml
examples/: AlertRules.yaml
pyazsentinel/: __init__.py  client.py
pyazsentinel/auth/: __init__.py  authentication.py
pyazsentinel/cli/: __init__.py  main.py
pyazsentinel/models/: __init__.py  alert_rule.py  data_connector.py  enums.py  hunting_rule.py  incident.py
pyazsentinel/services/: __init__.py  alert_rules.py  base_service.py  data_connectors.py  hunting_rules.py  incidents.py
pyazsentinel/utils/: __init__.py  exceptions.py  json_helper.py  yaml_helper.py
tests/: __init__.py  test_alert_rules.py
